<resources>
    <string name="app_name">New VPN</string>
    <string name="connect_with_qr_code">Connect With QR Code</string>
    <string name="connect_with_otp">Connect With OTP</string>
    <string name="downloading">Downloading...</string>
    <string name="connection_name">Connection Name</string>
    <string name="connection1">Connection1</string>
    <string name="next">Next</string>
    <string name="please_enter_your_identification">Please enter your identification.</string>
    <string name="id">ID</string>
    <string name="toolbar_title">Back</string>
    <string name="we_will_send_you_an_one_time_password_on_your_mobile_phone">We will send you an <b>One Time Password</b> on your mobile phone</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="don_t_receive_the_otp">Don\'t receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="new_connection_set_up_successfully_completed">New connection set up successfully completed.</string>
    <string name="not_connected">Not Connected</string>
    <string name="connection_1">Connection 1</string>
    <string name="select_connection">Select Connection</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="menu">Menu</string>
    <string name="help_us_improve_vika_vpn">Help Us Improve VIKA VPN</string>
    <string name="your_feedback_opinion">Your Feedback (Opinion)</string>
    <string name="submit">Submit</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="thank_you_for_sharing_your_thoughts_we_appreciate_your_feedback">Thank you for sharing your thoughts. We appreciate your feedback!</string>
    <string name="connection_quality">Connection Quality</string>
    <string name="moka_string">Vika</string>
    <string name="decline_string">Decline</string>
    <string name="accept_string">Accept</string>
    <string name="delete_connection_question">Do you want to delete this connection?</string>
    <string name="cancel_string">Cancel</string>
    <string name="enter_connection_name">Enter connection name</string>
    <string name="enter_user_name">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="update_string">Update</string>
    <string name="header_active_connection">Active Connection</string>
    <string name="header_other_connection">Available Connections</string>
    <string name="activation">Activation</string>
    <string name="user_name">Username</string>

</resources>