<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServerNameActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/serverNameLogoIconImage"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/serverNameLogoTextImage"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/serverNameLogoTextImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@drawable/img_vika_text"
        app:layout_constraintBottom_toBottomOf="@+id/serverNameLogoIconImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/serverNameLogoIconImage"
        app:layout_constraintTop_toTopOf="@+id/serverNameLogoIconImage" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/serverNameDownloadStatusString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/connection_name"
        android:textColor="?primary_text_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serverNameLogoIconImage"
        app:layout_constraintVertical_bias="0.1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/serverNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_edittext"
        android:padding="12dp"
        android:text="@string/connection1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serverNameDownloadStatusString">

        <requestFocus />
    </androidx.appcompat.widget.AppCompatEditText>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="?secondary_text_color"
        app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:iconGravity="end"
        app:iconTint="@color/color_blue_light"
        app:layout_constraintEnd_toEndOf="@+id/serverNameText"
        app:layout_constraintTop_toBottomOf="@+id/serverNameText" />

</androidx.constraintlayout.widget.ConstraintLayout>