<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpIdActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <include layout="@layout/app_bar_detail" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <include layout="@layout/layout_logo_merge" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/otpIdDescriptionString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:text="@string/please_enter_your_identification"
            android:textColor="?primary_text_color"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iconImage" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/otpIdDownloadStatusString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/id"
            android:textColor="?primary_text_color"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otpIdDescriptionString"
            app:layout_constraintVertical_bias="0.05" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/otpIdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otpIdDownloadStatusString">

            <requestFocus />
        </androidx.appcompat.widget.AppCompatEditText>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="?secondary_text_color"
            app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:iconGravity="end"
            app:iconTint="@color/color_blue_light"
            app:layout_constraintEnd_toEndOf="@+id/otpIdText"
            app:layout_constraintTop_toBottomOf="@+id/otpIdText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
