<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpCodeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <include layout="@layout/app_bar_detail" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/otpCodeLogoIconImage"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/otpCodeLogoTextImage"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/otpCodeLogoTextImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/img_vika_text"
            app:layout_constraintBottom_toBottomOf="@+id/otpCodeLogoIconImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/otpCodeLogoIconImage"
            app:layout_constraintTop_toTopOf="@+id/otpCodeLogoIconImage" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/otpCodeDescriptionString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:text="@string/we_will_send_you_an_one_time_password_on_your_mobile_phone"
            android:textColor="?primary_text_color"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otpCodeLogoIconImage" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/otpCodeDownloadStatusString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/otp_verification"
            android:textColor="?primary_text_color"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otpCodeDescriptionString"
            app:layout_constraintVertical_bias="0.05" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/otpCodeTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="2:45"
            android:textColor="@color/color_pink_light"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/otpCodeDownloadStatusString"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/otpCodeDownloadStatusString"
            app:layout_constraintTop_toTopOf="@+id/otpCodeDownloadStatusString" />

        <com.mkdev.vpnnewdesign.customViews.OtpCodeView
            android:id="@+id/otpCodeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otpCodeDownloadStatusString" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/otpCodeNextAction"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="?secondary_text_color"
            android:visibility="gone"
            app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:iconGravity="end"
            app:iconTint="?secondary_text_color"
            app:layout_constraintEnd_toEndOf="@+id/otpCodeText"
            app:layout_constraintTop_toBottomOf="@+id/otpCodeRetryReceiveOtpString"
            tools:visibility="visible" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/otpCodeRetryReceiveOtpString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/don_t_receive_the_otp"
            android:textColor="?primary_text_color"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otpCodeText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/otpCodeRetryReceiveOtpAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_otp"
            android:textColor="?colorSecondary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/otpCodeRetryReceiveOtpString"
            app:layout_constraintEnd_toEndOf="@+id/otpCodeText"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/otpCodeRetryReceiveOtpString"
            app:layout_constraintTop_toTopOf="@+id/otpCodeRetryReceiveOtpString" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
