<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <include layout="@layout/app_bar_detail" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/mainLogoIconImage"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mainLogoTextImage"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/mainLogoTextImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/img_vika_text"
            app:layout_constraintBottom_toBottomOf="@+id/mainLogoIconImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mainLogoIconImage"
            app:layout_constraintTop_toTopOf="@+id/mainLogoIconImage" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/mainLogoCircleImageA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="45"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:src="@drawable/ic_circle"
            android:tint="@color/color_pink_dark_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainLogoIconImage"
            app:layout_constraintVertical_bias="0.1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/mainLogoCircleImageB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:src="@drawable/ic_circle"
            android:tint="@color/color_pink_dark_circle"
            app:layout_constraintBottom_toBottomOf="@+id/mainLogoCircleImageA"
            app:layout_constraintEnd_toEndOf="@+id/mainLogoCircleImageA"
            app:layout_constraintStart_toStartOf="@+id/mainLogoCircleImageA"
            app:layout_constraintTop_toTopOf="@+id/mainLogoCircleImageA" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mainOnAction"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:textColor="@color/color_pink_dark_circle"
            app:cornerRadius="60dp"
            app:icon="@drawable/ic_baseline_power_settings_new_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="48dp"
            app:iconTint="@color/color_pink_dark_circle"
            app:layout_constraintBottom_toBottomOf="@+id/mainLogoCircleImageB"
            app:layout_constraintEnd_toEndOf="@+id/mainLogoCircleImageB"
            app:layout_constraintStart_toStartOf="@+id/mainLogoCircleImageB"
            app:layout_constraintTop_toTopOf="@+id/mainLogoCircleImageB" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/mainOffAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_off"
            app:layout_constraintBottom_toTopOf="@+id/mainTimerString"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainLogoIconImage"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mainTimerString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="00:00:10"
            android:textColor="@color/color_gray_light"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/mainDownloadStatusString"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainOffAction" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mainDownloadStatusString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_connected"
            android:textColor="@color/color_pink_light"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/mainSelectConnectionString"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainTimerString" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLineChart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_curve_shape"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/mainSelectConnectionString"
            app:layout_constraintEnd_toEndOf="@+id/maimQrButton"
            app:layout_constraintStart_toStartOf="@+id/maimQrButton"
            app:layout_constraintTop_toBottomOf="@+id/mainDownloadStatusString"
            tools:visibility="visible">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mainConnectionQualityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection_quality"
                android:textColor="@color/color_gray_light"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mainConnectionQualityGoodTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Good"
                android:textColor="@color/color_gray_light"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/mainConnectionQualityNormalTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mainConnectionQualityTitle"
                app:layout_constraintVertical_chainStyle="spread" />

            <View
                android:id="@+id/mainConnectionQualityGoodLine"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:alpha="0.2"
                android:background="@color/color_gray_light"
                app:layout_constraintBottom_toBottomOf="@+id/mainConnectionQualityGoodTitle"
                app:layout_constraintEnd_toEndOf="@id/lineChart"
                app:layout_constraintStart_toStartOf="@+id/lineChart"
                app:layout_constraintTop_toTopOf="@+id/mainConnectionQualityGoodTitle" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mainConnectionQualityNormalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Normal"
                android:textColor="@color/color_gray_light"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/mainConnectionQualityLowTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mainConnectionQualityGoodTitle" />

            <View
                android:id="@+id/mainConnectionQualityNormalLine"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:alpha="0.2"
                android:background="@color/color_gray_light"
                app:layout_constraintBottom_toBottomOf="@+id/mainConnectionQualityNormalTitle"
                app:layout_constraintEnd_toEndOf="@id/lineChart"
                app:layout_constraintStart_toStartOf="@+id/lineChart"
                app:layout_constraintTop_toTopOf="@+id/mainConnectionQualityNormalTitle" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mainConnectionQualityLowTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Low"
                android:textColor="@color/color_gray_light"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mainConnectionQualityNormalTitle" />

            <View
                android:id="@+id/mainConnectionQualityLowLine"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:alpha="0.2"
                android:background="@color/color_gray_light"
                app:layout_constraintBottom_toBottomOf="@+id/mainConnectionQualityLowTitle"
                app:layout_constraintEnd_toEndOf="@id/lineChart"
                app:layout_constraintStart_toStartOf="@+id/lineChart"
                app:layout_constraintTop_toTopOf="@+id/mainConnectionQualityLowTitle" />

            <com.db.williamchart.view.LineChartView
                android:id="@+id/lineChart"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                app:chart_axis="none"
                app:chart_gridEffect="dotted"
                app:chart_labelsColor="#FF70977F"
                app:chart_labelsSize="10sp"
                app:chart_lineColor="#ffffff"
                app:chart_lineThickness="3dp"
                app:chart_smoothLine="true"
                app:layout_constraintBottom_toTopOf="@id/mainConnectionQualityLowLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/mainConnectionQualityNormalTitle"
                app:layout_constraintTop_toBottomOf="@+id/mainConnectionQualityGoodLine" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mainSelectConnectionString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/select_connection"
            android:textColor="@color/color_gray_light"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/maimQrButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/maimQrButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical|start"
            android:text="@string/connection_1"
            android:textAllCaps="false"
            app:cornerRadius="24dp"
            app:icon="@drawable/ic_baseline_signal_cellular_alt_24"
            app:iconTint="@color/color_green_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainDownloadStatusString"
            app:layout_constraintVertical_bias="0.8" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:elevation="5dp"
            android:rotation="-90"
            android:tint="@color/color_gray_light"
            app:layout_constraintBottom_toBottomOf="@+id/maimQrButton"
            app:layout_constraintEnd_toEndOf="@+id/maimQrButton"
            app:layout_constraintTop_toTopOf="@+id/maimQrButton"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/mainOnGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="mainLogoCircleImageA,mainLogoCircleImageB,mainOnAction" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/mainOffGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:constraint_referenced_ids="mainOffAction,mainTimerString" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>